src/objects/Customer_Envelope__c.object
<CustomObject>
    <description>This object is to store the record of  application with its check number for the validation purpose.</description>
    <fields>
        <fullName>DHP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US 1898 - sending Customer Envelope to DHP list view</description>
        <label>DHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Today_s__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date_Today&apos;s</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_program_type__c</fullName>
        <label>Default program type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Funerals</fullName>
                </value>
                <value>
                    <fullName>cemeteries</fullName>
                </value>
                <value>
                    <fullName>engineers</fullName>
                </value>
                <value>
                    <fullName>land surveyors</fullName>
                </value>
                <value>
                    <fullName>on-site wastewater</fullName>
                </value>
                <value>
                    <fullName>collection agencies</fullName>
                </value>
                <value>
                    <fullName>geologists</fullName>
                </value>
                <value>
                    <fullName>architects</fullName>
                </value>
                <value>
                    <fullName>landscape architects</fullName>
                </value>
                <value>
                    <fullName>camping resorts</fullName>
                </value>
                <value>
                    <fullName>appraisers-real estate</fullName>
                </value>
                <value>
                    <fullName>timeshares</fullName>
                </value>
                <value>
                    <fullName>notaries public</fullName>
                </value>
                <value>
                    <fullName>appraisal management companies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_DHP_Deposits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US 1898 - sending Customer Envelope that has receipt type DHP to DHP list view</description>
        <label>Has DHP Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lockbox_Envelope__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lockbox Envelope</label>
        <referenceTo>Lockbox_Envelope__c</referenceTo>
        <relationshipLabel>Customer Envelopes</relationshipLabel>
        <relationshipName>Customer_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_documents__c</fullName>
        <label>Number of Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_payments__c</fullName>
        <label>Number of Receipts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>draft</fullName>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>pending</fullName>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>processed</fullName>
                    <label>Processed</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Submissions Attached</fullName>
                </value>
                
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unprocessed_documents__c</fullName>
        <label>Unprocessed documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Validation_number__c</fullName>
        <displayFormat>BPD-{000000000}</displayFormat>
        <label>Validation Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>wadol_DefaultProgramType__c</fullName>
        <label>Default Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Customer Envelope</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Validation_number__c</columns>
        <columns>Total_amount__c</columns>
        <columns>Number_of_payments__c</columns>
        <columns>Number_of_documents__c</columns>
        <columns>Has_DHP_Deposits__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DHP_Customer_Envelope</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Validation_number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Has_DHP_Deposits__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DHP Customer Envelope</label>
    </listViews>
    <nameField>
        <displayFormat>CENV{YY}-{0000}</displayFormat>
        <label>Customer Envelope Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Envelopes</pluralLabel>
    <recordTypes>
        <fullName>Default_Customer_Envelope</fullName>
        <active>true</active>
        <label>Default Customer Envelope</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>